--- a/WebApp/composer.json
+++ b/WebApp/composer.json
@@ -11,8 +11,8 @@
 	},
 	"autoload":{
 		"psr-4":{
-			"Controllers\\":"app/controllers/",
-			"Models\\":"app/models/"
+			"Controllers\\":"app/controllers",
+			"Models\\":"app/models"
 		}
 	}
 
